grammar.js
    source_file: ($) => seq(optional($.shebang), repeat($._statement)),

    _statement: ($) => choice($.expression_statement, $._declaration_statement),

    empty_statement: () => ';',

    expression_statement: ($) => choice(seq($._expression, ';'), prec(1, $._expression_ending_with_block)),

    _declaration_statement: ($) =>
      choice(
        $.const_item,
        $.macro_invocation,
        $.macro_definition,
        $.empty_statement,
        $.attribute_item,
        $.inner_attribute_item,
        $.mod_item,
        $.foreign_mod_item,
        $.struct_item,
        $.union_item,
        $.enum_item,
        $.type_item,
        $.function_item,
        $.function_signature_item,
        $.impl_item,
        $.trait_item,
        $.associated_type,
        $.let_declaration,
        $.use_declaration,
        $.extern_crate_declaration,
        $.static_item
      ),

    // Section - Macro definitions

    macro_definition: ($) => {
      const rules = seq(repeat(seq($.macro_rule, ';')), optional($.macro_rule));

      return seq(
        'macro_rules!',
        field('name', choice($.identifier, $._reserved_identifier)),
        choice(seq('(', rules, ')', ';'), seq('[', rules, ']', ';'), seq('{', rules, '}'))
      );
    },

    macro_rule: ($) => seq(field('left', $.token_tree_pattern), '=>', field('right', $.token_tree)),

    _token_pattern: ($) =>
      choice(
        $.token_tree_pattern,
        $.token_repetition_pattern,
        $.token_binding_pattern,
        $.metavariable,
        $._non_special_token
      ),

    token_tree_pattern: ($) =>
      choice(
        seq('(', repeat($._token_pattern), ')'),
        seq('[', repeat($._token_pattern), ']'),
        seq('{', repeat($._token_pattern), '}')
      ),

    token_binding_pattern: ($) => prec(1, seq(field('name', $.metavariable), ':', field('type', $.fragment_specifier))),

    token_repetition_pattern: ($) =>
      seq('$', '(', repeat($._token_pattern), ')', optional(/[^+*?]+/), choice('+', '*', '?')),

    fragment_specifier: () =>
      choice(
        'block',
        'expr',
        'expr_2021',
        'ident',
        'item',
        'lifetime',
        'literal',
        'meta',
        'pat',
        'pat_param',
        'path',
        'stmt',
        'tt',
        'ty',
        'vis'
      ),

    _tokens: ($) => choice($.token_tree, $.token_repetition, $.metavariable, $._non_special_token),

    token_tree: ($) =>
      choice(seq('(', repeat($._tokens), ')'), seq('[', repeat($._tokens), ']'), seq('{', repeat($._tokens), '}')),

    token_repetition: ($) => seq('$', '(', repeat($._tokens), ')', optional(/[^+*?]+/), choice('+', '*', '?')),

    // Matches non-delimiter tokens common to both macro invocations and
    // definitions. This is everything except $ and metavariables (which begin
    // with $).
    inner_attribute_item: ($) => seq('#', '!', '[', $.attribute, ']'),

    attribute: ($) =>
      seq(
        $._path,
        optional(
          choice(seq('=', field('value', $._expression)), field('arguments', alias($.delim_token_tree, $.token_tree)))
        )
      ),

    mod_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'mod',
        field('name', $.identifier),
        choice(';', field('body', $.declaration_list))
      ),

    declaration_list: ($) => seq('{', repeat($._declaration_statement), '}'),

    // Items in `extern` blocks may be `safe` functions and `safe` or `unsafe` statics. `safe` is a keyword only where
    // such an item starts: accepting it on every item would make it one wherever an item can start, breaking its uses as
    // an identifier (`let safe = …; safe = …;`).
    struct_item: ($) =>
      seq(
        optional($.visibility_modifier),
        'struct',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        choice(
          seq(optional($.where_clause), field('body', $.field_declaration_list)),
          seq(field('body', $.ordered_field_declaration_list), optional($.where_clause), ';'),
          ';'
        )
      ),

    field_declaration_list: ($) =>
      seq('{', sepBy(',', seq(repeat($.attribute_item), $.field_declaration)), optional(','), '}'),

    field_declaration: ($) =>
      seq(optional($.visibility_modifier), field('name', $._field_identifier), ':', field('type', $._type)),

    ordered_field_declaration_list: ($) =>
      seq(
        '(',
        sepBy(',', seq(repeat($.attribute_item), optional($.visibility_modifier), field('type', $._type))),
        optional(','),
        ')'
      ),

    function_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional($.function_modifiers),
        'fn',
        field('name', choice($.identifier, $.metavariable)),
        field('type_parameters', optional($.type_parameters)),
        field('parameters', $.parameters),
        optional(seq('->', field('return_type', $._type))),
        optional($.where_clause),
        field('body', $.block)
      ),

    impl_item: ($) =>
      seq(
        optional('unsafe'),
        'impl',
        field('type_parameters', optional($.type_parameters)),
        optional(
          seq(
            optional('!'),
            field('trait', choice($._type_identifier, $.scoped_type_identifier, $.generic_type)),
            'for'
          )
        ),
        field('type', $._type),
        optional($.where_clause),
        choice(field('body', $.declaration_list), ';')
      ),

    trait_item: ($) =>
      seq(
        optional($.visibility_modifier),
        optional('unsafe'),
        'trait',
        field('name', $._type_identifier),
        field('type_parameters', optional($.type_parameters)),
        field('bounds', optional($.trait_bounds)),
        optional($.where_clause),
        field('body', $.declaration_list)
      ),

    trait_bounds: ($) => seq(':', sepBy1('+', choice($._type, $.lifetime, $.higher_ranked_trait_bound))),

    type_parameters: ($) =>
      prec(
        1,
        seq(
          '<',
          sepBy1(
            ',',
            seq(
              repeat($.attribute_item),
              choice($.metavariable, $.type_parameter, $.lifetime_parameter, $.const_parameter)
            )
          ),
          optional(','),
          '>'
        )
      ),

    type_parameter: ($) =>
      prec(
        1,
        seq(
          field('name', $._type_identifier),
          optional(field('bounds', $.trait_bounds)),
          optional(seq('=', field('default_type', $._type)))
        )
      ),

    let_declaration: ($) =>
      seq(
        'let',
        optional($.mutable_specifier),
        field('pattern', $._pattern),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('value', $._expression))),
        optional(seq('else', field('alternative', $.block))),
        ';'
      ),

    parameters: ($) =>
      seq(
        '(',
        sepBy(
          ',',
          seq(repeat($.attribute_item), choice($.parameter, $.self_parameter, $.variadic_parameter, '_', $._type))
        ),
        optional(','),
        ')'
      ),

    parameter: ($) =>
      seq(optional($.mutable_specifier), field('pattern', choice($._pattern, $.self)), ':', field('type', $._type)),

    visibility_modifier: ($) =>
      choice($.crate, seq('pub', optional(seq('(', choice($.self, $.super, $.crate, seq('in', $._path)), ')')))),

    // Section - Types

    _type: ($) =>
      choice(
        $.abstract_type,
        $.reference_type,
        $.metavariable,
        $.pointer_type,
        $.generic_type,
        $.scoped_type_identifier,
        $.tuple_type,
        $.unit_type,
        $.array_type,
        $.function_type,
        $._type_identifier,
        $.macro_invocation,
        $.never_type,
        $.dynamic_type,
        $.bounded_type,
        $.removed_trait_bound,
        alias(choice(...primitiveTypes), $.primitive_type)
      ),

    array_type: ($) => seq('[', field('element', $._type), optional(seq(';', field('length', $._expression))), ']'),

    function_type: ($) =>
      seq(
        optional($.for_lifetimes),
        prec(
          PREC.call,
          seq(
            choice(
              field('trait', choice($._type_identifier, $.scoped_type_identifier)),
              seq(optional($.function_modifiers), 'fn')
            ),
            field('parameters', $.parameters)
          )
        ),
        optional(seq('->', field('return_type', $._type)))
      ),

    generic_function: ($) =>
      prec(
        1,
        seq(
          field('function', choice($.identifier, $.scoped_identifier, $.field_expression)),
          '::',
          field('type_arguments', $.type_arguments)
        )
      ),

    type_arguments: ($) =>
      seq(
        token(prec(1, '<')),
        sepBy1(',', seq(choice($._type, $.type_binding, $.lifetime, $._literal, $.block), optional($.trait_bounds))),
        optional(','),
        '>'
      ),

    mutable_specifier: () => 'mut',

    // Section - Expressions

    _expression_except_range: ($) =>
      choice(
        $.unary_expression,
        $.reference_expression,
        $.try_expression,
        $.binary_expression,
        $.assignment_expression,
        $.compound_assignment_expr,
        $.type_cast_expression,
        $.call_expression,
        $.return_expression,
        $.yield_expression,
        $._literal,
        prec.left($.identifier),
        alias(choice(...primitiveTypes), $.identifier),
        prec.left($._reserved_identifier),
        $.self,
        $.scoped_identifier,
        $.generic_function,
        $.await_expression,
        $.field_expression,
        $.array_expression,
        $.tuple_expression,
        prec(1, $.macro_invocation),
        $.unit_expression,
        $.break_expression,
        $.continue_expression,
        $.index_expression,
        $.metavariable,
        $.closure_expression,
        $.parenthesized_expression,
        $.struct_expression,
        $._expression_ending_with_block
      ),

    _expression: ($) => choice($._expression_except_range, $.range_expression),

    _expression_ending_with_block: ($) =>
      choice(
        $.unsafe_block,
        $.async_block,
        $.gen_block,
        $.try_block,
        $.block,
        $.if_expression,
        $.match_expression,
        $.while_expression,
        $.loop_expression,
        $.for_expression,
        $.const_block
      ),

    macro_invocation: ($) =>
      seq(
        field(
          'macro',
          choice(
            $.scoped_identifier,
            $.identifier,
            alias(choice(...primitiveTypes), $.identifier),
            $._reserved_identifier
          )
        ),
        '!',
        alias($.delim_token_tree, $.token_tree)
      ),

    scoped_identifier: ($) =>
      seq(
        field(
          'path',
          optional(choice($._path, $.bracketed_type, alias($.generic_type_with_turbofish, $.generic_type)))
        ),
        '::',
        field('name', choice($.identifier, $.super))
      ),

    scoped_type_identifier: ($) =>
      seq(
        field(
          'path',
          optional(
            choice($._path, alias($.generic_type_with_turbofish, $.generic_type), $.bracketed_type, $.generic_type)
          )
        ),
        '::',
        field('name', $._type_identifier)
      ),

    binary_expression: ($) => {
      /** @type {[number, RuleOrLiteral][]} */
      const table = [
        [PREC.and, '&&'],
        [PREC.or, '||'],
        [PREC.bitand, '&'],
        [PREC.bitor, '|'],
        [PREC.bitxor, '^'],
        [PREC.comparative, choice('==', '!=', '<', token(prec(2, '<=')), '>', '>=')],
        [PREC.shift, choice('<<', '>>')],
        [PREC.additive, choice('+', '-')],
        [PREC.multiplicative, choice('*', '/', '%')],
      ];

      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(field('left', $._expression), field('operator', operator), field('right', $._expression))
          )
        )
      );
    },

    assignment_expression: ($) =>
      prec.left(PREC.assign, seq(field('left', $._expression), '=', field('right', $._expression))),

    call_expression: ($) =>
      prec(PREC.call, seq(field('function', $._expression_except_range), field('arguments', $.arguments))),

    arguments: ($) => seq('(', sepBy(',', seq(repeat($.attribute_item), $._expression)), optional(','), ')'),

    array_expression: ($) =>
      seq(
        '[',
        repeat($.attribute_item),
        choice(
          seq($._expression, ';', field('length', $._expression)),
          seq(sepBy(',', seq(repeat($.attribute_item), $._expression)), optional(','))
        ),
        ']'
      ),

    struct_expression: ($) =>
      seq(
        field(
          'name',
          choice(
            $._type_identifier,
            alias($.scoped_type_identifier_in_expression_position, $.scoped_type_identifier),
            $.generic_type_with_turbofish
          )
        ),
        field('body', $.field_initializer_list)
      ),

    field_initializer_list: ($) =>
      seq(
        '{',
        sepBy(',', choice($.shorthand_field_initializer, $.field_initializer, $.base_field_initializer)),
        optional(','),
        '}'
      ),

    field_initializer: ($) =>
      seq(
        repeat($.attribute_item),
        field('field', choice($._field_identifier, alias(/[0-9][0-9_]*/, $.integer_literal))),
        ':',
        field('value', $._expression)
      ),

    if_expression: ($) =>
      prec.right(
        seq(
          'if',
          field('condition', $._condition),
          field('consequence', $.block),
          optional(field('alternative', $.else_clause))
        )
      ),

    _condition: ($) => choice($._expression, $.let_condition, alias($._let_chain, $.let_chain)),

    else_clause: ($) => seq('else', choice($.block, $.if_expression)),

    match_expression: ($) => seq('match', field('value', $._expression), field('body', $.match_block)),

    match_block: ($) => seq('{', optional(seq(repeat($.match_arm), alias($.last_match_arm, $.match_arm))), '}'),

    match_arm: ($) =>
      prec.right(
        seq(
          repeat(choice($.attribute_item, $.inner_attribute_item)),
          field('pattern', $.match_pattern),
          '=>',
          choice(seq(field('value', $._expression), ','), field('value', prec(1, $._expression_ending_with_block)))
        )
      ),

    match_pattern: ($) => seq($._pattern, optional(seq('if', field('condition', $._condition)))),

    index_expression: ($) => prec(PREC.call, seq($._expression, '[', $._expression, ']')),

    field_expression: ($) =>
      prec(
        PREC.field,
        seq(
          field('value', $._expression),
          '.',
          field('field', choice($._field_identifier, alias(/[0-9][0-9_]*/, $.integer_literal)))
        )
      ),

    block: ($) => seq(optional(seq($.label, ':')), '{', repeat($._statement), optional($._expression), '}'),

    // Section - Patterns

    _pattern: ($) =>
      choice(
        $._literal_pattern,
        alias(choice(...primitiveTypes), $.identifier),
        $.identifier,
        $.scoped_identifier,
        $.generic_pattern,
        $.tuple_pattern,
        $.tuple_struct_pattern,
        $.struct_pattern,
        $._reserved_identifier,
        $.ref_pattern,
        $.slice_pattern,
        $.captured_pattern,
        $.reference_pattern,
        $.remaining_field_pattern,
        $.mut_pattern,
        $.range_pattern,
        $.or_pattern,
        $.const_block,
        $.macro_invocation,
        '_'
      ),

    tuple_struct_pattern: ($) =>
      seq(
        field('type', choice($.identifier, $.scoped_identifier, alias($.generic_type_with_turbofish, $.generic_type))),
        '(',
        sepBy(',', $._pattern),
        optional(','),
        ')'
      ),

    self: () => 'self',
